res/test/fortran/testfortran.err
Error in res/test/fortran/testfortran.f90 at line 6: Number of Unit declarations don't match
Error in res/test/fortran/testfortran.f90 at line 7: Number of Unit declarations don't match
Error in res/test/fortran/testfortran.f90 at line 30: Units of expression X1, unit not yet defined and expression X2, unit not yet defined at = operation can't be matched
Error in res/test/fortran/testfortran.f90 at line 37: Units don't match at .GT. operation. variable instance [X2]=m should be expression [0]=1 
Error in res/test/fortran/testfortran.f90 at line 38: Number of Unit declarations don't match
